Made the Firefox plugin idle when the tab is not active

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -30,6 +30,7 @@
         }
     },
     "permissions": [
+        "tabs",
         "webRequest",
         "https://*.ikariam.gameforge.com/?view=*",
         "http://localhost/ikariam-planner/*"
