--- a/ui/ikariam-planner.csproj
+++ b/ui/ikariam-planner.csproj
@@ -63,6 +63,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\StoredModel.cs" />
+    <Compile Include="Server\FileStore.cs" />
     <Compile Include="Server\Packet.cs" />
     <Compile Include="Server\Server.cs" />
     <Compile Include="Ui\SystemTray.cs" />
