--- a/ui/ikariam-planner.csproj
+++ b/ui/ikariam-planner.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,10 +64,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\Coordinate.cs" />
     <Compile Include="Model\StoredModel.cs" />
+    <Compile Include="Model\Town.cs" />
     <Compile Include="Model\ViewModel.cs" />
     <Compile Include="Server\FileStore.cs" />
+    <Compile Include="Server\IScraper.cs" />
     <Compile Include="Server\Packet.cs" />
+    <Compile Include="Server\Scrapers\TownNameScraper.cs" />
     <Compile Include="Server\Server.cs" />
     <Compile Include="Ui\SystemTray.cs" />
     <Compile Include="Ui\Ui.cs" />
