--- a/ui/ikariam-planner.csproj
+++ b/ui/ikariam-planner.csproj
@@ -72,11 +72,13 @@
     <Compile Include="Model\StoredModel.cs" />
     <Compile Include="Model\Time.cs" />
     <Compile Include="Model\Town.cs" />
+    <Compile Include="Model\TownBuilding.cs" />
     <Compile Include="Model\ViewModel.cs" />
     <Compile Include="Server\FileStore.cs" />
     <Compile Include="Server\IScraper.cs" />
     <Compile Include="Server\Packet.cs" />
     <Compile Include="Server\Scrapers\HelpBuildingScraper.cs" />
+    <Compile Include="Server\Scrapers\TownBuildingScraper.cs" />
     <Compile Include="Server\Scrapers\TownNameScraper.cs" />
     <Compile Include="Server\Scrapers\TownResourceScraper.cs" />
     <Compile Include="Server\Server.cs" />
